c/examples/writing-a-c-compiler-tests/tests/chapter_10/valid/extra_credit/libraries/same_label_same_fun.c
static int f(void) {
    goto x;
    return 0;
    x:
    return 2;
}

int f_caller(void) {
    return f();
}