c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_types/static_block_scope_function_declaration.c
int main(void) {
    /* Can't have static storage class
     * on block-scope function declarations
     */
    static int foo(void);
    return foo();
}

static int foo(void) {
    return 0;
}